feat(backend, Order, OrderDetails): implemented order, order details related operations